// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test useRenderDatabaseSelectionItems should render rule template display correctly with is_global_rule_template is equal false 1`] = `
<BasicToolTip
  title={
    <ForwardRef(TypedLink)
      params={
        {
          "dbType": "mysql",
          "projectID": "700300",
          "templateName": "template1",
        }
      }
      target="_blank"
      to={
        {
          "path": "detail/:templateName/:dbType",
          "prefix": "/sqle/project/:projectID/rule/template",
        }
      }
    >
      规则模板
      : 
      template1
    </ForwardRef(TypedLink)>
  }
>
  <BasicButton
    className="data-source-row-rule-template"
    icon={
      <ProfileSquareFilled
        color="#4583FF"
        height="18"
        width="18"
      />
    }
  />
</BasicToolTip>
`;

exports[`test useRenderDatabaseSelectionItems should render rule template display correctly with is_global_rule_template is equal true 1`] = `
<BasicToolTip
  title={
    <ForwardRef(TypedLink)
      params={
        {
          "dbType": "mysql",
          "projectID": "700300",
          "templateName": "template1",
        }
      }
      target="_blank"
      to={
        {
          "path": "global-detail/:templateName/:dbType",
          "prefix": "/sqle/rule-manager",
        }
      }
    >
      规则模板
      : 
      template1
    </ForwardRef(TypedLink)>
  }
>
  <BasicButton
    className="data-source-row-rule-template"
    icon={
      <ProfileSquareFilled
        color="#4583FF"
        height="18"
        width="18"
      />
    }
  />
</BasicToolTip>
`;
